--- a/apps.html
+++ b/apps.html
@@ -26,7 +26,7 @@
 
 <div class="idontlikeclasses inlarge">
   <a href="altdev.html">
-  <img class="ermage" src="Gifs/gun.gif" alt="Your GIF">
+  <img class="ermage" src="Gifs/fun.gif" alt="Your GIF">
   <div class="overlay"></div>
   <div class="texticus highlight">ALTDEV</div>
   <div class="texticus money">FREE</div>
